# hh

./: LICENSE  README  hh.cabal
scripts/: .inputrc  hh.bash  hh.zsh
src/: .gitignore  hh.hs
