Name:                hh
Version:             0.1
Synopsis:            history tui
Homepage:            http://itay.bazoo.org/projects/hh
License:             GPL
License-file:        LICENSE
Author:              Itay Donenhirsch
Maintainer:          itay@bazoo.org
Category:            Utility
Build-type:          Simple
Cabal-version:       >=1.2

Executable hh
  Main-is:          hh.hs
  Build-depends:    base >= 3 && <= 5, vty >= 4.2.1.0
  HS-Source-Dirs:   src
